cmake_minimum_required(VERSION 3.10)
project(demos)

add_subdirectory(hello_world)
add_subdirectory(cluster)
add_subdirectory(yanghui_triangle)
add_subdirectory(yanghui_cluster)
add_subdirectory(actor_monitor)
add_subdirectory(actor_fault_tolerance)
add_subdirectory(additional_allownance)
add_subdirectory(load_balancer)
add_subdirectory(actor_status)

